--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "cordova-plugin-splashscreen": "6.0.0",
         "cordova-plugin-whitelist": "1.3.4",
         "monaca-plugin-monaca-core": "3.3.1",
-        "cordova-plugin-geolocation": "4.0.2"
+        "cordova-plugin-geolocation": "4.0.2",
+        "ncmb-push-monaca-plugin": "3.1.1"
     },
     "scripts": {
         "monaca:preview": "npm run dev",
@@ -19,7 +20,8 @@
             "cordova-plugin-splashscreen": {},
             "cordova-custom-config": {},
             "monaca-plugin-monaca-core": {},
-            "cordova-plugin-geolocation": {}
+            "cordova-plugin-geolocation": {},
+            "ncmb-push-monaca-plugin": {}
         }
     },
     "devDependencies": {
